# most-popular-python-libs

./: .gitignore  00_gen_all.py  161_activation_function.py  README.md  pyproject.toml  run_pycodestyle.py
FM/: 00_index.py  feedback.py  opl3_waveforms.py  plot_wave.py
GenAI/: genai.html
GraphQL/llm-1/: llm_call.py  pyproject.toml
PySimpleGUI/: 01-empty-window.py  02-empty-window-event-loop.py  02-window-with-text-label.py  03-window-with-text-label.py  04-more-controls.py  04-window-with-text-label.py  05-more-controls.py  06-events.py  06-info.py  07-events-cancel.py  07-events.py  08-events-cancel.py  08-one-shot-window.py  09-one-shot-window.py  10-sizing.py  11-different-theme.py  11-even-more-controls.py  12-different-theme.py  12-print-themes.py  13-print-themes-2.py  13-print-themes.py  14-print-themes-2.py  14-select-theme.py  15-select-theme.py  16-better-select-theme.py  17-default-alignment.py  18-center-alignment.py  19-right-alignment.py  20-push.py  21-columns.py  22-columns.py  23-separators.py  24-frames.py  25-menu.py  26-status-bar.py  28-context-menu.py  29-canvas.py  30-canvas-size-background.py  31-draw-on-canvas.py  32-more-shapes.py  (+22 more)
PyTorch/: 00_index.py  activation_function_relu_numpy.py  activation_function_relu_pytorch.py  activation_function_sigmoid_numpy.py  activation_function_sigmoid_pytorch.py  activation_function_tanh_numpy.py  activation_function_tanh_pytorch.py  activation_functions.py  activation_functions_numpy.py  activation_functions_pytorch.py  classification_report.py  compute_train_and_test_data.py  confusion_matrix.py  conv_nn_01_digits.py  conv_nn_02_digits_as_bitmaps.py  conv_nn_03_show_digits.py  conv_nn_04_show_digits.py  conv_nn_05_show_all_digits.py  conv_nn_06_noise.py  conv_nn_07_noise_levels.py  conv_nn_08_5_6_or_8.py  conv_nn_09_shift.py  conv_nn_10_shifts.py  conv_nn_11_classification_report.py  conv_nn_12_confusion_matrix.py  conv_nn_13_input_data.py  conv_nn_14_real_input_data.py  conv_nn_15_train_test_data.py  conv_nn_16_simple_nn.py  conv_nn_17_noise_nn.py  conv_nn_18_shift_nn.py  conv_nn_19_noise_and_shift_nn.py  conv_nn_20_confusion_matrix.py  is_cuda_available.py  is_mps_available.py  make_circles.py  make_circles_labels.py  make_data_set.py  make_more_noise_circles.py  nn_01.py  (+90 more)
faiss/: 00_index.py  faiss-1.py  faiss-2.py  faiss-3.py  faiss-4.py  faiss-5.py  faiss-6.py  faiss-7.py  faiss-8.py  faiss-9.py  faiss-A.py  faiss-B.py  faiss-C.py  faiss-D.py  faiss-E.py  faiss-F.py  faiss-G.py  faiss-H.py  faiss-I.py  faiss-index-benchmark-1.py  faiss-index-benchmark-2.py  faiss-index-benchmark-3.py  faiss-index-benchmark-4.py  faiss-index-benchmark-5.py  faiss-index-benchmark-6.py  faiss-index-benchmark-7.py  faiss-index-benchmark-8.py  faiss-index-benchmark-9.py  pyproject.toml
faiss_transformers/: dataset1.py  dataset2.py  dataset3.py  dataset4.py  pyproject.toml  transformer1.py  transformer2.py  transformer3.py  transformer4.py  transformer5.py  transformer7.py  transformer8.py  transformer9.py  transformerA.py  transformerB.py  transformerC.py  transformerD.py  transformerE.py  transformerF.py  transformerG.py
fastapi/app3/: pyproject.toml
fastapi/app3/src/example_package/: main.py
fastapi/app6/: pyproject.toml
fastapi/app6/src/example_package/: main.py
fastapi/sources/: main1.py  main3.py  main4.py  main5.py  pyproject.toml  pyproject2.toml
langchain-framework/: 00_index.py  chain.py  context.py  list_models.py  openai_query.py  openai_query_2.py  pdf_loader.py  prompt.py  prompt2.py  pyproject.toml  temperature.py  text_loader_1.py  text_loader_2.py  text_loader_3.py  text_splitter_1.py  text_splitter_2.py  text_splitter_3.py  text_splitter_4.py  tokens1.py  tokens2.py  web_based_loader.py  whole_chain.py
langchain-framework/documents/: assemblery.txt
llama-stack-demo/demo1/: client1.py  pyproject.toml
llama-stack-demo/demo3/: client3.py  pyproject.toml
pdm/project6/: pyproject.toml
pgvector/: binary_embeddings_1.py  binary_embeddings_2.py  binary_embeddings_3.py  binary_embeddings_4.py  create_embeddings_one_sentence.py  create_extension.py  create_table_b1.py  create_table_v2.py  create_table_v384.py  create_table_v384B.py  index-benchmark-1.py  index-benchmark-2.py  index-benchmark-3.py  index-benchmark-4.py  index-benchmark-5.py  index-benchmark-6.py  insert_into_b1.py  insert_into_v2.py  insert_normalized.py  pyproject.toml  read_vectors_1.py  read_vectors_2.py  read_vectors_3.py  select_by_distance_1.py  select_by_distance_2.py  select_by_distance_3.py  select_by_distance_4.py  select_by_distance_b1_1.py  select_by_distance_b1_2.py  select_by_distance_b1_3.py  select_by_distance_b1_4.py  sentence_into_v384.py  sentence_similarity_1.py  sentence_similarity_2.py  sentence_similarity_b2.py  sentences_into_b2.py  sentences_into_v384.py  sentences_into_v384b.py  various_distances.py  various_distances_normalized.py
sklearn/: 01_show_matrix.py  02_get_digits.py  03_get_features.py  04_get_images.py  05_show_grayscale_matrix.py  06_grayscale_images.py  07_multiplot.py  08_model_preperation_1.py  09_training_set.py  100_k_fold_1.py  101_k_fold_2.py  102_k_fold_selection.py  103_average_score.py  104_hyperparams_score.py  105_hyperparams_score_plot.py  106_model_selection.py  107_features_selection_basic.py  108_features_selection_iris.py  109_features_selection_houses.py  10_classification.py  110_best_features_selection_houses.py  111_features_selection_graphical.py  112_simplest_linear_regression.py  112_simplest_linear_regression_random_x.py  113_linear_regression_no_intercept.py  114_linear_regression_from_0_0.py  114_linear_regression_from_0_0_B.py  115_linear_regression_multiple_y.py  116_grid_operations.py  117_linear_regression_multiple_x.py  118_linear_regression_multiple_x.py  119_linear_regression_multiple_x_and_y.py  11_results.py  120_linear_regression_multiple_x_and_y.py  121_linear_regression_poly.py  122_linear_regression_poly_multiple_x.py  123_linear_regression_poly_multiple_x.py  124_iris_set_statistic.py  125_california_housings_statistic.py  126_variance_threshold_1.py  (+187 more)
(+7271 files in other folders)
