[tool.ruff]

# description of all rules are available on https://docs.astral.sh/ruff/rules/
lint.select = ["D", "E", "F", "W", "C", "S", "I", "G", "TCH", "SLOT", "RUF", "C90", "N", "YTT", "ASYNC", "A", "C4", "T10", "FURB", "PERF", "AIR", "NPY", "FLY", "PLW2901"]

# we need to check 'mood' of all docstrings, this needs to be enabled explicitly
#lint.extend-select = ["D401"]

lint.ignore = ["COM812", "G004", "TRY003", "EM102", "TD", "TRY300", "FIX002", "UP007", "UP009", "T201", "F405"]

target-version = "py311"
lint.pydocstyle.convention = "google"
line-length = 100

exclude = ["coconut", "pyrsistent"]

[tool.coverage.report]
# unit tests fails if the total coverage measurement is under this threshold value
fail_under = 90

[tool.mypy]
disable_error_code = ["union-attr", "return-value", "arg-type", "import-untyped"]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.bandit]
skips = []
exclude_dirs = ["tests", "scripts"]

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
]

[[tool.pdm.source]]
type = "find_links"
url = "https://download.pytorch.org/whl/cpu/torch_stable.html"
name = "torch"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "Most popular Python libs"
version = "0.1.0"
description = "Examples for the most popular Python libraries"
authors = []
dependencies = [
]
requires-python = "==3.11.*"
readme = "README.md"
license = {file = "LICENSE"}

[tool.pdm.scripts]
start = "pdm run make run"
test = "pdm run make test"
test-unit = "pdm run make test-unit"
check-types = "pdm run make check-types"
security-check = "pdm run make security-check"

[tool.setuptools]
packages = ["ols"]
