[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "notebook>=7.0.6",
    "nbmerge>=0.0.4",
    "numpy>=1.25.2",
    "matplotlib>=3.8.1",
    "xarray>=2023.10.1",
    "scipy>=1.9.3",
    "plotnine>=0.12.4",
    "seaborn>=0.13.0",
    "sklearn>=0.0.post11",
    "scikit-learn>=1.3.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

