[tool.ruff]

# description of all rules are available on https://docs.astral.sh/ruff/rules/
lint.select = ["F401"]

# we need to check 'mood' of all docstrings, this needs to be enabled explicitly
lint.extend-select = ["D401"]

lint.ignore = ["COM812", "G004", "TRY003", "EM102", "TD", "TRY300", "FIX002", "UP007", "UP009", "T201"]

target-version = "py311"
lint.pydocstyle.convention = "google"
line-length = 100

exclude = ["coconut", "pyrsistent"]

[project]
name = ""
version = "1.0.0"
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "notebook>=7.0.6",
    "nbmerge>=0.0.4",
    "numpy>=1.25.2",
    "matplotlib>=3.8.1",
    "xarray>=2023.10.1",
    "scipy>=1.9.3",
    "plotnine>=0.12.4",
    "seaborn>=0.13.0",
    "sklearn>=0.0.post11",
    "scikit-learn>=1.3.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

